force-app/main/default/objects/User/fields/AccountName2__c.field-meta.xml
<CustomField>
    <fullName>AccountName2__c</fullName>
    <label>AccountName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>