force-app/main/default/objects/User/fields/Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Users list view in Setup to list System Administrator users.  This works regardless of the language the org is in.</description>
    <label>Admin User</label>
    <type>Checkbox</type>
</CustomField>