force-app/main/default/objects/User/fields/Branding_Template__c.field-meta.xml
<CustomField>
    <fullName>Branding_Template__c</fullName>
    <description>The template used for branding for this user.</description>
    <label>Branding Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>