force-app/main/default/objects/User/fields/Closed_Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Closed_Credit_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Credit Account</label>
    <type>Checkbox</type>
</CustomField>