force-app/main/default/objects/User/fields/Consumer_User__c.field-meta.xml
<CustomField>
    <fullName>Consumer_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer User</label>
    <type>Checkbox</type>
</CustomField>