force-app/main/default/objects/User/fields/Field_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify users created to demonstrate Field Service Lighting.</description>
    <inlineHelpText>Used to identify users created to demonstrate Field Service Lighting.</inlineHelpText>
    <label>Field Service User</label>
    <type>Checkbox</type>
</CustomField>