force-app/main/default/objects/User/fields/Lightning_Scheduler_User__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Scheduler_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lightning Scheduler User</label>
    <type>Checkbox</type>
</CustomField>