force-app/main/default/objects/User/fields/Manager_PTO__c.field-meta.xml
<CustomField>
    <fullName>Manager_PTO__c</fullName>
    <label>Manager (PTO)</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>