force-app/main/default/objects/User/fields/Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Role__c</fullName>
    <description>Used in communities to personalize the experience based on primary role of the user.</description>
    <label>Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>