force-app/main/default/objects/User/fields/sales_management__c.field-meta.xml
<CustomField>
    <fullName>sales_management__c</fullName>
    <label>Sales Management</label>
    <relationshipName>R00N8c00000YnsF8EAJ</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>