force-app/main/default/objects/User/fields/Single_Time_Setup__c.field-meta.xml
<CustomField>
    <fullName>Single_Time_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Q Branch to identify if setup scripts have been run through this given user.</description>
    <label>Single Time Setup</label>
    <type>Checkbox</type>
</CustomField>