force-app/main/default/objects/User/fields/TrialforceDate__c.field-meta.xml
<CustomField>
    <fullName>TrialforceDate__c</fullName>
    <label>TrialforceDate</label>
    <type>DateTime</type>
</CustomField>