force-app/main/default/objects/User/fields/Work_com_Points__c.field-meta.xml
<CustomField>
    <fullName>Work_com_Points__c</fullName>
    <description>This field contains the current Work.com Points that have been accumulated for this User.</description>
    <inlineHelpText>This field contains the current Work.com Points that have been accumulated for this User.</inlineHelpText>
    <label>Work.com Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>