force-app/main/default/objects/User/listViews/CommunityUsers.listView-meta.xml
<ListView>
    <fullName>CommunityUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>contains</operation>
        <value>Portal,Partner,CSN</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Community Users</label>
    <language>en_US</language>
</ListView>