force-app/main/default/objects/User/listViews/KeyUsers.listView-meta.xml
<ListView>
    <fullName>KeyUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Key_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>*Key Users</label>
    <language>en_US</language>
</ListView>