force-app/main/default/objects/User/listViews/Service_Users.listView-meta.xml
<ListView>
    <fullName>Service_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Support,Engineer,Service</value>
    </filters>
    <label>Service Users</label>
    <language>en_US</language>
</ListView>